fix: Advanced Macros Not working (#835)
Another attempt at making Advanced Macro module useable with Twodsix (text for macro too dark).

--- a/static/styles/twodsix_moduleFix.css
+++ b/static/styles/twodsix_moduleFix.css
@@ -28,6 +28,8 @@ input.dice-tray__input {
 }
 
 /*Fix Advanced Macro Background Issue*/
-.macro-sheet .form-group.command .furnace-macro-command code {
-  background: var(--app-color);
+.macro-sheet .form-group.command .furnace-macro-command code,  .macro-sheet .form-group.command .furnace-macro-command textarea{
+  -webkit-text-fill-color: inherit !important;
+  background: var(--s2d6-background-opaque) !important;
+  color: var(--s2d6-default) !important;
 }
